--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -3,9 +3,9 @@
 .layout {
   &__background {
     content: '';
-    position: absolute;
+    position: fixed;
     inset: 0;
-    background: url("@/assets/images/background.jpg") no-repeat center / contain;
+    background: url("@/assets/images/background.jpg") center / contain no-repeat;
     background-size: 150% auto;
     filter: blur(20px);
   }
